--- a/src/main/resources/regression/mrtydi-v1.1-ar.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-ar.yaml
@@ -1,7 +1,7 @@
 ---
-name: mrtydi-v1.1-ar
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: mrtydi-v1.1-ar
+corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-arabic
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -38,11 +38,6 @@ evals:
     metric: R@100
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/mr-tydi-corpus/mrtydi-v1.1-arabic
 index_path: indexes/lucene-index.mrtydi-v1.1-arabic.pos+docvectors+raw
 index_stats:
   documents: 2106586
