--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-v2-passage-unicoil-noexp-0shot
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-v2-passage-unicoil-noexp-0shot
+corpus_path: collections/msmarco/msmarco-passage-v2-unicoil-noexp-0shot-b8
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -53,11 +53,6 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: false
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/msmarco-passage-v2-unicoil-noexp-0shot-b8
 index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot
 index_stats:
   documents: 138364198
@@ -65,9 +60,11 @@ index_stats:
   total terms: 411330032512
 topics:
   - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    id: dev
     path: topics.msmarco-v2-passage.dev.unicoil-noexp.0shot.tsv.gz
     qrel: qrels.msmarco-v2-passage.dev.txt
   - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    id: dev2
     path: topics.msmarco-v2-passage.dev2.unicoil-noexp.0shot.tsv.gz
     qrel: qrels.msmarco-v2-passage.dev2.txt
 models:
