--- a/src/main/resources/regression/ntcir8-zh.yaml
+++ b/src/main/resources/regression/ntcir8-zh.yaml
@@ -1,7 +1,7 @@
 ---
-name: ntcir8-zh
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: ntcir8-zh
+corpus_path: collections/newswire/clir/ntcir.zh/ntcir8-zh/
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -45,11 +45,6 @@ evals:
     metric: ndcg20
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/newswire/clir/ntcir.zh/ntcir8-zh/
 index_path: indexes/lucene-index.ntcir8-zh.pos+docvectors+raw
 index_stats:
   documents: 308832
