--- a/src/main/resources/regression/robust05.yaml
+++ b/src/main/resources/regression/robust05.yaml
@@ -1,7 +1,7 @@
 ---
-name: robust05
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: robust05
+corpus_path: collections/newswire/AQUAINT/
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -32,11 +32,6 @@ evals:
     metric: p30
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/newswire/AQUAINT/
 index_path: indexes/lucene-index.robust05.pos+docvectors+raw
 index_stats:
   documents: 1031455
