--- a/src/main/resources/regression/backgroundlinking20.yaml
+++ b/src/main/resources/regression/backgroundlinking20.yaml
@@ -1,29 +1,25 @@
 ---
-name: backgroundlinking20
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-ranking_root:
+corpus: backgroundlinking20
+corpus_path: collections/newswire/WashingtonPost.v3/data/
+
+index_path: indexes/lucene-index.core18-v3.pos+docvectors+raw
+collection: WashingtonPostCollection
 generator: WashingtonPostGenerator
 threads: 1
 index_options:
   - -storePositions
   - -storeDocvectors
   - -storeRaw
-topic_reader: BackgroundLinking
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/newswire/WashingtonPost.v3/data/
-index_path: indexes/lucene-index.core18-v3.pos+docvectors+raw
-collection: WashingtonPostCollection
 index_stats:
   documents: 671945
   documents (non-empty): 671945
   total terms: 366108177
+
+search_command: target/appassembler/bin/SearchCollection
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
+ranking_root:
+topic_reader: BackgroundLinking
 topics:
   - name: "[TREC 2020 Topics](../src/main/resources/topics-and-qrels/topics.backgroundlinking20.txt)"
     path: topics.backgroundlinking20.txt
