--- a/src/main/resources/regression/cacm.yaml
+++ b/src/main/resources/regression/cacm.yaml
@@ -1,21 +1,8 @@
 ---
-name: cacm
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
-search_command: target/appassembler/bin/SearchCollection
-ranking_root:
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-input_roots:
-  - ""
-input: src/main/resources/cacm/
-index_path: indexes/lucene-index.cacm.pos+docvectors
-index_stats:
-  documents: 3204
-  documents (non-empty): 3204
-  unique terms: 14363
-  total terms: 320968
+corpus: cacm
+corpus_path: src/main/resources/cacm/
 
+index_path: indexes/lucene-index.cacm.pos+docvectors
 collection: HtmlCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 8
@@ -23,6 +10,17 @@ index_options:
   - -storePositions
   - -storeDocvectors
   - -optimize
+index_stats:
+  documents: 3204
+  documents (non-empty): 3204
+  unique terms: 14363
+  total terms: 320968
+
+search_command: target/appassembler/bin/SearchCollection
+ranking_root:
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
+
 topic_reader: Cacm
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
