--- a/src/main/resources/regression/cw09b.yaml
+++ b/src/main/resources/regression/cw09b.yaml
@@ -1,16 +1,11 @@
 ---
-name: cw09b
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: cw09b
+corpus_path: collections/web/ClueWeb09b/
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 ranking_root:
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/web/ClueWeb09b/
 index_path: indexes/lucene-index.cw09b.pos+docvectors+raw
 collection: ClueWeb09Collection
 generator: DefaultLuceneDocumentGenerator
