--- a/src/main/resources/regression/dl19-doc.yaml
+++ b/src/main/resources/regression/dl19-doc.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-doc # Note, this is the name of the collection; this way we can share index with the msmarco regressions
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-doc
+corpus_path: collections/msmarco/doc/
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -43,11 +43,6 @@ evals:
     metric: NDCG@10
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/doc/
 index_path: indexes/lucene-index.msmarco-doc.pos+docvectors+raw
 index_stats:
   documents: 3213835
@@ -55,6 +50,7 @@ index_stats:
   total terms: 2748636047
 topics:
   - name: "[DL19 (Doc)](https://trec.nist.gov/data/deep2019.html)"
+    id: dl19
     path: topics.dl19-doc.txt
     qrel: qrels.dl19-doc.txt
 models:
