--- a/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-passage-docTTTTTquery # Note, this is the name of the collection; this way we can share index with the msmarco regressions
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-passage-docTTTTTquery
+corpus_path: collections/msmarco/passage-docTTTTTquery
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -45,11 +45,6 @@ evals:
     metric: NDCG@10
     metric_precision: 4
     can_combine: false
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/passage-docTTTTTquery
 index_path: indexes/lucene-index.msmarco-passage-docTTTTTquery.pos+docvectors+raw
 index_stats:
   documents: 8841823
@@ -57,6 +52,7 @@ index_stats:
   total terms: 1986612263
 topics:
   - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2019.html)"
+    id: dl19
     path: topics.dl19-passage.txt
     qrel: qrels.dl19-passage.txt
 models:
