--- a/src/main/resources/regression/dl20-doc-docTTTTTquery-per-passage.yaml
+++ b/src/main/resources/regression/dl20-doc-docTTTTTquery-per-passage.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-doc-docTTTTTquery-per-passage # Note, this is the name of the collection; this way we can share index with the msmarco regressions
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-doc-docTTTTTquery-per-passage
+corpus_path: collections/msmarco/doc-docTTTTTquery-per-passage
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -52,11 +52,6 @@ evals:
     metric: R@100
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/doc-docTTTTTquery-per-passage
 index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-passage.pos+docvectors+raw
 index_stats:
   documents: 20544550
@@ -64,6 +59,7 @@ index_stats:
   total terms: 4203956960
 topics:
   - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
     path: topics.dl20.txt
     qrel: qrels.dl20-doc.txt
 models:
