--- a/src/main/resources/regression/dl20-passage.yaml
+++ b/src/main/resources/regression/dl20-passage.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-passage # Note, this is the name of the collection; this way we can share index with the msmarco regressions
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-passage
+corpus_path: collections/msmarco/passage/
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -65,11 +65,6 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: false
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/passage/
 index_path: indexes/lucene-index.msmarco-passage.pos+docvectors+raw
 index_stats:
   documents: 8841823
@@ -77,6 +72,7 @@ index_stats:
   total terms: 352316036
 topics:
   - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
     path: topics.dl20.txt
     qrel: qrels.dl20-passage.txt
 models:
