--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot.yaml
@@ -1,7 +1,7 @@
 ---
-name: dl21-doc-segmented-unicoil-noexp-0shot
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-v2-doc-segmented-unicoil-noexp-0shot
+corpus_path: collections/msmarco/msmarco-doc-v2-seg-unicoil-noexp-0shot-b8
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -62,11 +62,6 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: false
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/msmarco-doc-v2-seg-unicoil-noexp-0shot-b8
 index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot
 index_stats:
   documents: 124131404
@@ -74,6 +69,7 @@ index_stats:
   total terms: 805830282591
 topics:
   - name: "[DL21 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    id: dl21
     path: topics.dl21.unicoil-noexp.0shot.tsv.gz
     qrel: qrels.dl21-doc.txt
 models:
