--- a/src/main/resources/regression/dl21-passage-augmented.yaml
+++ b/src/main/resources/regression/dl21-passage-augmented.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-v2-passage-augmented
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-v2-passage-augmented
+corpus_path: collections/msmarco/msmarco_v2_passage
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -67,11 +67,6 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: false
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_passage
 index_path: indexes/lucene-index.msmarco-v2-passage-augmented.pos+docvectors+raw
 index_stats:
   documents: 138364198
@@ -79,6 +74,7 @@ index_stats:
   total terms: 15272964956
 topics:
   - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    id: dl21
     path: topics.dl21.txt
     qrel: qrels.dl21-passage.txt
 models:
