--- a/src/main/resources/regression/fever.yaml
+++ b/src/main/resources/regression/fever.yaml
@@ -1,12 +1,8 @@
 ---
-name: fever
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
+corpus: fever
+corpus_path: collections/fever/wiki-pages
+
+index_path: indexes/lucene-index.fever-paragraph
 collection: FeverParagraphCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 1
@@ -14,6 +10,16 @@ index_options:
   - -storePositions
   - -storeDocvectors
   - -storeRaw
+index_stats:
+  documents: 5396106
+  documents (non-empty): 5396060
+  total terms: 322660819
+
+search_command: target/appassembler/bin/SearchCollection
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
+index_root:
+ranking_root:
 topic_reader: TsvInt
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -34,16 +40,6 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/fever/wiki-pages
-index_path: indexes/fever/lucene-index-fever-paragraph
-index_stats:
-  documents: 5396106
-  documents (non-empty): 5396060
-  total terms: 322660819
 topics:
   - name: "[FEVER Paper Development Dataset](https://s3-eu-west-1.amazonaws.com/fever.public/paper_dev.jsonl)"
     path: topics.fever.dev.txt
