--- a/src/main/resources/regression/msmarco-doc-per-passage-v2.yaml
+++ b/src/main/resources/regression/msmarco-doc-per-passage-v2.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-doc-per-passage-v2
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-doc-per-passage-v2
+corpus_path: collections/msmarco/doc-per-passage-v2/
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -43,11 +43,6 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/doc-per-passage-v2/
 index_path: indexes/lucene-index.msmarco-doc-per-passage-v2.pos+docvectors+raw
 index_stats:
   documents: 20545677
@@ -55,6 +50,7 @@ index_stats:
   total terms: 3056059952
 topics:
   - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
+    id: dev
     path: topics.msmarco-doc.dev.txt
     qrel: qrels.msmarco-doc.dev.txt
 models:
