--- a/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
@@ -1,7 +1,7 @@
 ---
-name: msmarco-v2-doc-segmented
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
+corpus: msmarco-v2-doc-segmented
+corpus_path: collections/msmarco/msmarco_v2_doc_segmented
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
@@ -54,11 +54,6 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: false
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_doc_segmented
 index_path: indexes/lucene-index.msmarco-v2-doc-segmented.pos+docvectors+raw
 index_stats:
   documents: 124131414
@@ -66,9 +61,11 @@ index_stats:
   total terms: 24780915974
 topics:
   - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    id: dev
     path: topics.msmarco-v2-doc.dev.txt
     qrel: qrels.msmarco-v2-doc.dev.txt
   - name: "[MS MARCO V2 Doc: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    id: dev2
     path: topics.msmarco-v2-doc.dev2.txt
     qrel: qrels.msmarco-v2-doc.dev2.txt
 models:
