--- a/src/main/resources/regression/clef06-fr.yaml
+++ b/src/main/resources/regression/clef06-fr.yaml
@@ -2,11 +2,7 @@
 corpus: clef06-fr
 corpus_path: collections/newswire/clir/clef2006-fr.json
 
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
+index_path: indexes/lucene-index.clef06-fr.pos+docvectors+raw
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
@@ -15,9 +11,19 @@ index_options:
   - -storeDocvectors
   - -storeRaw
   - -language fr
+index_stats:
+  documents: 171109
+  documents (non-empty): 171109
+  total terms: 34352833
+
+search_command: target/appassembler/bin/SearchCollection
 search_options:
   - -language fr
-topic_reader: TsvString
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
+index_root:
+ranking_root:
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
@@ -43,15 +49,14 @@ evals:
     metric: ndcg20
     metric_precision: 4
     can_combine: true
-index_path: indexes/lucene-index.clef06-fr.pos+docvectors+raw
-index_stats:
-  documents: 171109
-  documents (non-empty): 171109
-  total terms: 34352833  
+
+topic_reader: TsvString
 topics:
   - name: "[CLEF 2006 (Monolingual French)](../src/main/resources/topics-and-qrels/topics.clef06fr.mono.fr.txt)"
+    id: clef06fr
     path: topics.clef06fr.mono.fr.txt
     qrel: qrels.clef06fr.txt
+
 models:
   - name: bm25
     display: BM25
