--- a/src/main/resources/regression/core18.yaml
+++ b/src/main/resources/regression/core18.yaml
@@ -1,28 +1,25 @@
 ---
-corpus: core18
+corpus: wapo.v2
 corpus_path: collections/newswire/WashingtonPost.v2/data/
 
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-ranking_root:
+index_path: indexes/lucene-index.wapo.v2.pos+docvectors+raw
+collection: WashingtonPostCollection
 generator: WashingtonPostGenerator
 threads: 1
 index_options:
   - -storePositions
   - -storeDocvectors
   - -storeRaw
-topic_reader: Trec
-index_path: indexes/lucene-index.core18.pos+docvectors+raw
-collection: WashingtonPostCollection
 index_stats:
   documents: 595031
   documents (non-empty): 595030
   total terms: 318219870
-topics:
-  - name: "[TREC 2018 Common Core Track Topics](../src/main/resources/topics-and-qrels/topics.core18.txt)"
-    path: topics.core18.txt
-    qrel: qrels.core18.txt
+
+search_command: target/appassembler/bin/SearchCollection
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
+ranking_root:
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
@@ -40,6 +37,14 @@ evals:
     metric: p30
     metric_precision: 4
     can_combine: true
+
+topic_reader: Trec
+topics:
+  - name: "[TREC 2018 Common Core Track Topics](../src/main/resources/topics-and-qrels/topics.core18.txt)"
+    id: core18
+    path: topics.core18.txt
+    qrel: qrels.core18.txt
+
 models:
   - name: bm25
     display: BM25
