--- a/src/main/resources/regression/backgroundlinking18.yaml
+++ b/src/main/resources/regression/backgroundlinking18.yaml
@@ -6,10 +6,7 @@ index_path: indexes/lucene-index.wapo.v2.pos+docvectors+raw
 collection: WashingtonPostCollection
 generator: WashingtonPostGenerator
 threads: 1
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 595031
   documents (non-empty): 595030
