--- a/src/main/resources/regression/car17v2.0.yaml
+++ b/src/main/resources/regression/car17v2.0.yaml
@@ -6,10 +6,7 @@ index_path: indexes/lucene-index.car-paragraphCorpus.v2.0.pos+docvectors+raw
 collection: CarCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 1
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 29794689
   documents (non-empty): 29791059
