--- a/src/main/resources/regression/core17.yaml
+++ b/src/main/resources/regression/core17.yaml
@@ -6,10 +6,7 @@ index_path: indexes/lucene-index.nyt.pos+docvectors+raw
 collection: NewYorkTimesCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 1855650
   documents (non-empty): 1855650
