--- a/src/main/resources/regression/cw12.yaml
+++ b/src/main/resources/regression/cw12.yaml
@@ -6,10 +6,7 @@ index_path: indexes/lucene-index.cw12.pos+docvectors+raw
 collection: ClueWeb12Collection
 generator: DefaultLuceneDocumentGenerator
 threads: 44
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
+index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 731645141
   documents (non-empty): 731542236
