--- a/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
@@ -2,19 +2,22 @@
 corpus: msmarco-passage-docTTTTTquery
 corpus_path: collections/msmarco/passage-docTTTTTquery
 
+index_path: indexes/lucene-index.msmarco-passage-docTTTTTquery.pos+docvectors+raw
+collection: JsonCollection
+generator: DefaultLuceneDocumentGenerator
+threads: 9
+index_options: -storePositions -storeDocvectors -storeRaw
+index_stats:
+  documents: 8841823
+  documents (non-empty): 8841823
+  total terms: 1986612263
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: JsonCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 9
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-topic_reader: TsvInt
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
@@ -45,16 +48,14 @@ evals:
     metric: NDCG@10
     metric_precision: 4
     can_combine: false
-index_path: indexes/lucene-index.msmarco-passage-docTTTTTquery.pos+docvectors+raw
-index_stats:
-  documents: 8841823
-  documents (non-empty): 8841823
-  total terms: 1986612263
+
+topic_reader: TsvInt
 topics:
   - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2019.html)"
     id: dl19
     path: topics.dl19-passage.txt
     qrel: qrels.dl19-passage.txt
+
 models:
   - name: bm25-default
     display: BM25 (default)
