--- a/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
+++ b/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
@@ -2,19 +2,22 @@
 corpus: msmarco-doc-docTTTTTquery-per-doc
 corpus_path: collections/msmarco/doc-docTTTTTquery-per-doc
 
+index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-doc.pos+docvectors+raw
+collection: JsonCollection
+generator: DefaultLuceneDocumentGenerator
+threads: 1
+index_options: -storePositions -storeDocvectors -storeRaw
+index_stats:
+  documents: 3213834
+  documents (non-empty): 3213834
+  total terms: 3748332076
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: JsonCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 1
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-topic_reader: TsvInt
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
@@ -52,16 +55,14 @@ evals:
     metric: R@100
     metric_precision: 4
     can_combine: true
-index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-doc.pos+docvectors+raw
-index_stats:
-  documents: 3213834
-  documents (non-empty): 3213834
-  total terms: 3748332076
+
+topic_reader: TsvInt
 topics:
   - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
     id: dl20
     path: topics.dl20.txt
     qrel: qrels.dl20-doc.txt
+
 models:
   - name: bm25-default
     display: BM25 (default)
