--- a/src/main/resources/regression/gov2.yaml
+++ b/src/main/resources/regression/gov2.yaml
@@ -10,10 +10,7 @@ index_path: indexes/lucene-index.gov2.pos+docvectors+raw
 collection: TrecwebCollection
 threads: 44
 generator: DefaultLuceneDocumentGenerator
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
+index_options: -storePositions -storeDocvectors -storeRaw
 topic_reader: Trec
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
