--- a/src/main/resources/regression/backgroundlinking19.yaml
+++ b/src/main/resources/regression/backgroundlinking19.yaml
@@ -19,16 +19,14 @@ ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -c -M1000 -m ndcg_cut.5
+    params: -c -M1000 -m ndcg_cut.5
     separator: "\t"
     parse_index: 2
     metric: NCDG@5
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -c -M1000 -m map
+    params: -c -M1000 -m map
     separator: "\t"
     parse_index: 2
     metric: AP
