--- a/src/main/resources/regression/car17v2.0-doc2query.yaml
+++ b/src/main/resources/regression/car17v2.0-doc2query.yaml
@@ -19,16 +19,14 @@ ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -c -m map  # -c: average over all queries in qrels - this is critical here
+    params: -c -m map
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -c -m recip_rank
+    params: -c -m recip_rank
     separator: "\t"
     parse_index: 2
     metric: recip_rank
