--- a/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
+++ b/src/main/resources/regression/dl20-doc-docTTTTTquery-per-doc.yaml
@@ -20,36 +20,28 @@ ranking_root:
 
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m map
-      - -c
+    params: -c -m map
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m ndcg_cut.10
-      - -c
+    params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric: NDCG@10
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recip_rank
-      - -c
+    params: -c -m recip_rank
     separator: "\t"
     parse_index: 2
     metric: RR
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.100
-      - -c
+    params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric: R@100
