--- a/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl20-passage-docTTTTTquery.yaml
@@ -14,49 +14,35 @@ index_options: -storePositions -storeDocvectors -storeRaw
 topic_reader: TsvInt
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m map
-      - -c
-      - -l 2
+    params: -c -m map -l 2
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m ndcg_cut.10
-      - -c
+    params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric: NDCG@10
     metric_precision: 4
     can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recip_rank
-      - -c
-      - -l 2
+    params: -c -m recip_rank -l 2
     separator: "\t"
     parse_index: 2
     metric: RR
     metric_precision: 4
     can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.100
-      - -c
-      - -l 2
+    params: -c -m recall.100 -l 2
     separator: "\t"
     parse_index: 2
     metric: R@100
     metric_precision: 4
     can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.1000
-      - -c
-      - -l 2
+    params: -c -m recall.1000 -l 2
     separator: "\t"
     parse_index: 2
     metric: R@1000
