--- a/src/main/resources/regression/fire12-bn.yaml
+++ b/src/main/resources/regression/fire12-bn.yaml
@@ -20,24 +20,21 @@ search_options:
 topic_reader: Trec
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m map
+    params: -m map
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m P.20
+    params: -m P.20
     separator: "\t"
     parse_index: 2
     metric: p20
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m ndcg_cut.20
+    params: -m ndcg_cut.20
     separator: "\t"
     parse_index: 2
     metric: ndcg20
