--- a/src/main/resources/regression/gov2.yaml
+++ b/src/main/resources/regression/gov2.yaml
@@ -14,16 +14,14 @@ index_options: -storePositions -storeDocvectors -storeRaw
 topic_reader: Trec
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m map
+    params: -m map
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m P.30
+    params: -m P.30
     separator: "\t"
     parse_index: 2
     metric: p30
