--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
@@ -14,27 +14,21 @@ index_options: -storePositions -storeDocvectors -storeRaw
 topic_reader: TsvInt
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m map
-      - -c
+    params: -c -m map
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.100
-      - -c
+    params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric: R@100
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.1000
-      - -c
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric: R@1000
