--- a/src/main/resources/regression/msmarco-passage-unicoil-tilde-expansion.yaml
+++ b/src/main/resources/regression/msmarco-passage-unicoil-tilde-expansion.yaml
@@ -10,33 +10,25 @@ ranking_root:
 collection: JsonVectorCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
-index_options:
-  - -impact
-  - -pretokenized
+index_options: -impact -pretokenized
 topic_reader: TsvInt
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m map
-      - -c
+    params: -c -m map
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recip_rank
-      - -c
+    params: -c -m recip_rank
     separator: "\t"
     parse_index: 2
     metric: mrr
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.1000
-      - -c
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric: R@1000
