--- a/src/main/resources/regression/trec02-ar.yaml
+++ b/src/main/resources/regression/trec02-ar.yaml
@@ -2,22 +2,24 @@
 corpus: trec02-ar
 corpus_path: collections/newswire/clir/trec.ar/arabic_newswire_a_ldc2001t55/transcripts
 
+index_path: indexes/lucene-index.trec02-ar.pos+docvectors+raw
+collection: CleanTrecCollection
+generator: DefaultLuceneDocumentGenerator
+threads: 16
+index_options: -storePositions -storeDocvectors -storeRaw -language ar
+index_stats:
+  documents: 383872
+  documents (non-empty): 383872
+  total terms: 62378088
+
 search_command: target/appassembler/bin/SearchCollection
+search_options:
+  - -language ar
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: CleanTrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-  - -language ar
-search_options:
-  - -language ar
-topic_reader: Trec
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
@@ -43,15 +45,13 @@ evals:
     metric: ndcg20
     metric_precision: 4
     can_combine: true
-index_path: indexes/lucene-index.trec02-ar.pos+docvectors+raw
-index_stats:
-  documents: 383872
-  documents (non-empty): 383872
-  total terms: 62378088  
+
+topic_reader: Trec
 topics:
   - name: "[TREC 2002 (Monolingual Arabic)](../src/main/resources/topics-and-qrels/topics.trec02ar-ar.txt)"
     path: topics.trec02ar-ar.txt
     qrel: qrels.trec02ar.txt
+
 models:
   - name: bm25
     display: BM25
