--- a/src/main/resources/regression/dl21-passage.yaml
+++ b/src/main/resources/regression/dl21-passage.yaml
@@ -2,19 +2,22 @@
 corpus: msmarco-v2-passage
 corpus_path: collections/msmarco/msmarco_v2_passage
 
+index_path: indexes/lucene-index.msmarco-v2-passage.pos+docvectors+raw
+collection: MsMarcoV2PassageCollection
+generator: DefaultLuceneDocumentGenerator
+threads: 18
+index_options: -storePositions -storeDocvectors -storeRaw
+index_stats:
+  documents: 138364198
+  documents (non-empty): 138364197
+  total terms: 4673266762
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: MsMarcoV2PassageCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 18
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-topic_reader: TsvInt
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -M 100 -m map -l 2
@@ -51,16 +54,14 @@ evals:
     metric: R@1000
     metric_precision: 4
     can_combine: false
-index_path: indexes/lucene-index.msmarco-v2-passage.pos+docvectors+raw
-index_stats:
-  documents: 138364198
-  documents (non-empty): 138364197
-  total terms: 4673266762
+
+topic_reader: TsvInt
 topics:
   - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
     id: dl21
     path: topics.dl21.txt
     qrel: qrels.dl21-passage.txt
+
 models:
   - name: bm25-default
     display: BM25 (default)
