--- a/src/main/resources/regression/fire12-bn.yaml
+++ b/src/main/resources/regression/fire12-bn.yaml
@@ -2,19 +2,21 @@
 corpus: fire12-bn
 corpus_path: collections/fire/bengali/bn.docs.2012.19032012
 
+index_path: indexes/lucene-index.fire12-bn.pos+docvectors+raw
+collection: CleanTrecCollection
+generator: DefaultLuceneDocumentGenerator
+threads: 16
+index_options: -storePositions -storeDocvectors -storeRaw -language bn
+index_stats:
+  documents: 500122
+  documents (non-empty): 500122
+  total terms: 143972612
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: CleanTrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-  - -language bn
 search_options:
   - -language bn
 topic_reader: Trec
@@ -40,15 +42,12 @@ evals:
     metric: ndcg20
     metric_precision: 4
     can_combine: true
-index_path: indexes/lucene-index.fire12-bn.pos+docvectors+raw
-index_stats:
-  documents: 500122
-  documents (non-empty): 500122
-  total terms: 143972612  
+
 topics:
   - name: "[FIRE 2012 (Monolingual Bengali)](../src/main/resources/topics-and-qrels/topics.fire12bn.176-225.txt)"
     path: topics.fire12bn.176-225.txt
     qrel: qrels.fire12bn.176-225.txt
+
 models:
   - name: bm25
     display: BM25
