--- a/src/main/resources/regression/fire12-hi.yaml
+++ b/src/main/resources/regression/fire12-hi.yaml
@@ -2,22 +2,24 @@
 corpus: fire12-hi
 corpus_path: collections/fire/hindi/hi.docs.2011
 
+index_path: indexes/lucene-index.fire12-hi.pos+docvectors+raw
+collection: CleanTrecCollection
+generator: DefaultLuceneDocumentGenerator
+threads: 16
+index_options: -storePositions -storeDocvectors -storeRaw -language hi
+index_stats:
+  documents: 331599
+  documents (non-empty): 331599
+  total terms: 57038417
+
 search_command: target/appassembler/bin/SearchCollection
+search_options:
+  - -language hi
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: CleanTrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-  - -language hi
-search_options:
-  - -language hi
-topic_reader: Trec
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m map
@@ -40,15 +42,13 @@ evals:
     metric: ndcg20
     metric_precision: 4
     can_combine: true
-index_path: indexes/lucene-index.fire12-hi.pos+docvectors+raw
-index_stats:
-  documents: 331599
-  documents (non-empty): 331599
-  total terms: 57038417  
+
+topic_reader: Trec
 topics:
   - name: "[FIRE 2012 (Monolingual Hindi)](../src/main/resources/topics-and-qrels/topics.fire12en.176-225.txt)"
     path: topics.fire12hi.176-225.txt
     qrel: qrels.fire12hi.176-225.txt
+
 models:
   - name: bm25
     display: BM25
