--- a/src/main/resources/regression/mb11.yaml
+++ b/src/main/resources/regression/mb11.yaml
@@ -2,34 +2,22 @@
 corpus: mb11
 corpus_path: collections/twitter/Tweets2011-corpus/json.gold/
 
+index_path: indexes/lucene-index.mb11.pos+docvectors+raw
+collection: TweetCollection
+threads: 44
+generator: TweetGenerator
+index_options: -storePositions -storeDocvectors -storeRaw -uniqueDocid -tweet.keepUrls -tweet.stemming
+index_stats:
+  documents: 14950477
+  documents (non-empty): 14950449
+  total terms: 175050212
+
 search_command: target/appassembler/bin/SearchCollection
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-index_path: indexes/lucene-index.mb11.pos+docvectors+raw
-collection: TweetCollection
-threads: 44
-generator: TweetGenerator
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-  - -uniqueDocid
-  - -tweet.keepUrls
-  - -tweet.stemming
-index_stats:
-  documents: 14950477
-  documents (non-empty): 14950449
-  total terms: 175050212
-topic_reader: Microblog
-topics:
-  - name: "[TREC 2011 Microblog Track Topics](../src/main/resources/topics-and-qrels/topics.microblog2011.txt)"
-    path: topics.microblog2011.txt
-    qrel: qrels.microblog2011.txt
-  - name: "[TREC 2012 Microblog Track Topics](../src/main/resources/topics-and-qrels/topics.microblog2012.txt)"
-    path: topics.microblog2012.txt
-    qrel: qrels.microblog2012.txt
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -m map
@@ -45,6 +33,16 @@ evals:
     metric: p30
     metric_precision: 4
     can_combine: true
+
+topic_reader: Microblog
+topics:
+  - name: "[TREC 2011 Microblog Track Topics](../src/main/resources/topics-and-qrels/topics.microblog2011.txt)"
+    path: topics.microblog2011.txt
+    qrel: qrels.microblog2011.txt
+  - name: "[TREC 2012 Microblog Track Topics](../src/main/resources/topics-and-qrels/topics.microblog2012.txt)"
+    path: topics.microblog2012.txt
+    qrel: qrels.microblog2012.txt
+
 models:
   - name: bm25
     display: BM25
